final_project_deliverable/PERSONAL_EXPENSE_TRACKER/kubernets/kubernet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-ingress-resource
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
  - hosts:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: nginx-auth
            port:
              number: 80
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: flask-app-ingress
#   annotations:
#     kubernetes.io/ingress.class:  "public-iks-k8s-nginx"

#     nginx.ingress.kubernetes.io/ssl-redirect: "false"

# spec:
#   # ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - backend:
#               service:
#                 name: flask-app-service
#                 port:
#                   number: 5000
#             path: /
       
#            path: /auth
#            pathType: Prefix
#            backend:
#            service:
#             name: nginx-auth
#             port:
#               number: 5000
